--- a/_config.yml
+++ b/_config.yml
@@ -14,12 +14,12 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: 	(=①ω①=)  # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: Random blog, move along... # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  A random security blog, made by a random security person. More of personal notes website where I write stuffs I've learned about so that I can refer to them later ^^
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
@@ -32,8 +32,8 @@ github:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: MayonnaiseEGG
+  #email: # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - https://github.com/MarineB210 # change to your GitHub homepage
@@ -95,7 +95,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: "assets/img/avatar.png"
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
