--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -3,9 +3,9 @@
 - type: github
   icon: "fab fa-github"
 
-- type: email
-  icon: "fas fa-envelope"
-  noblank: true # open link in current tab
+#- type: email
+#  icon: "fas fa-envelope"
+#  noblank: true # open link in current tab
 
 - type: rss
   icon: "fas fa-rss"
